# rag_perf_demo

./: .env-example  README.md  app.py  db.py  embedding.py  flake.nix  pyproject.toml  rag.py  start-db.sh
commands/: chat.py  create_db.py  import_data.py
