[tool.poetry]
name = "rag-example"
version = "0.1.0"
description = ""
authors = ["Samuel Monson <smonson@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
numpy = "^2.0.1"
pandas = "^2.2.2"
torch = "^2.4.0"
transformers = "^4.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
