[tool.poetry]
name = "rag-example"
version = "0.1.0"
description = ""
authors = ["Samuel Monson <smonson@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
pandas = "^2.2.2"
torch = "^2.4.0"
transformers = "^4.44.0"
pgvector = "^0.3.2"
setuptools = "^72.1.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.375"


[tool.poetry.group.temp.dependencies]
pypdf2 = "^3.0.1"
python-dotenv = "^1.0.1"
streamlit = "^1.37.1"
openai = "^1.40.1"
accelerate = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
