[tool.poetry]
name = "rag-example"
version = "0.1.0"
description = ""
authors = ["Samuel Monson <smonson@redhat.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
psycopg = {extras = ["binary"], version = "^3.2.1"}
pandas = "^2.2.2"
torch = "^2.4.0"
transformers = "^4.44.0"
pgvector = "^0.2.5"
setuptools = "^72.1.0"
pypdf = "^4.3.1"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.375"


[tool.poetry.group.temp.dependencies]
python-dotenv = "^1.0.1"
streamlit = "^1.37.1"
openai = "^1.40.1"
accelerate = "^0.33.0"
bitsandbytes = "^0.43.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
